<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <groupId>com.github.git24j</groupId>
    <artifactId>git24j</artifactId>
    <version>1.0-SNAPSHOT</version>

    <reporting>
        <plugins>
            <!-- https://spotbugs.github.io/ -->
            <!-- https://spotbugs.github.io/spotbugs-maven-plugin/usage.html -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>3.1.12</version>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>

                <configuration>
                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <excludes>
<!--                        <exclude>**/AnnotatedCommitTest.java</exclude>-->
<!--                        <exclude>**/BasicOperationsTest.java</exclude>-->
                        <exclude>**/BlameTest.java</exclude>
<!--                        <exclude>**/BlobTest.java</exclude>-->
<!--                        <exclude>**/BranchTest.java</exclude>-->
<!--                        <exclude>**/CommitTest.java</exclude>-->
<!--                        <exclude>**/ConfigTest.java</exclude>-->
<!--                        <exclude>**/DiffTest.java</exclude>-->
<!--                        <exclude>**/ErrorTest.java</exclude>-->
<!--                        <exclude>**/GitObjectTest.java</exclude>-->
<!--                        <exclude>**/IBitEnumTest.java</exclude>-->
<!--                        <exclude>**/IndexTest.java</exclude>-->
<!--                        <exclude>**/Libgit2Test.java</exclude>-->
<!--                        <exclude>**/MailmapTest.java</exclude>-->
<!--                        <exclude>**/MainTest.java</exclude>-->
<!--                        <exclude>**/MergeTest.java</exclude>-->
<!--                        <exclude>**/OidTest.java</exclude>-->
<!--                        <exclude>**/ReferenceTest.java</exclude>-->
<!--                        <exclude>**/RepositoryTest.java</exclude>-->
<!--                        <exclude>**/RevparseTest.java</exclude>-->
<!--                        <exclude>**/TagTest.java</exclude>-->
<!--                        <exclude>**/TreeTest.java</exclude>-->
<!--                        <exclude>**/CredTest.java</exclude>-->
<!--                        <exclude>**/RefspecTest.java</exclude>-->
<!--                        <exclude>**/RevwalkTest.java</exclude>-->
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <doctitle>API for ${project.name} ${project.version}</doctitle>
                    <windowtitle>API for ${project.name} ${project.version}</windowtitle>
                    <testDoctitle>Test API for ${project.name} ${project.version}</testDoctitle>
                    <testWindowtitle>Test API for ${project.name} ${project.version}</testWindowtitle>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Git24J Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/git24j/git24j</url>
        </repository>
    </distributionManagement>
</project>